--- a/mto_pos/installx/builder/ant.install.properties
+++ b/mto_pos/installx/builder/ant.install.properties
@@ -17,32 +17,32 @@ patch.version = 8.0
 
 # Source Files - File mode (used when x.source.type == files)
 # Xstore base build
-build.xstore = C:\\artifacts\\22.0.0.0.20230127185818\\xstore-22.0.0.0.20230127185818.zip
+build.xstore = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xstore-22.0.0.0.20230127185818.zip
 # Xstore base build
-build.xstore-bin = C:\\artifacts\\22.0.0.0.20230127185818\\xstore-bin-22.0.0.0.20230127185818.zip
+build.xstore-bin = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xstore-bin-22.0.0.0.20230127185818.zip
 # Xstore base database build
-build.db = C:\\artifacts\\22.0.0.0.20230127185818\\dbmake-22.0.0.0.20230127185818.zip
+build.db = /opt/InstallX/artifacts/22.0.0.0.20230127185818/dbmake-22.0.0.0.20230127185818.zip
 # Xenvironment customer build file
 build.xenvcust = 
 # Xstore customer build
-build.cust = C:\\artifacts\\22.0.0.0.20230127185818\\mto-build.1.zip
+build.cust = /opt/InstallX/artifacts/22.0.0.0.20230127185818/mto-build.1.zip
 # Xcenter war file
-build.xcwar = C:\\artifacts\\22.0.0.0.20230127185818\\xcenter.war
+build.xcwar = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xcenter.war
 # Xadmin ear file
-build.xadmin = C:\\artifacts\\22.0.0.0.20230127185818\\xadmin.war
+build.xadmin = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xadmin.war
 # Xadmin DB zip
-build.xadmindb = C:\\artifacts\\22.0.0.0.20230127185818\\xadmin-database.zip
+build.xadmindb = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xadmin-database.zip
 # Xservices zip
-build.services = C:\\artifacts\\22.0.0.0.20230127185818\\xservices.zip
+build.services = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xservices.zip
 # Xservices war
-build.services.war = C:\\artifacts\\22.0.0.0.20230127185818\\xservices.war
+build.services.war = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xservices.war
 # Xenvironment zip
-build.xenvironment = C:\\artifacts\\22.0.0.0.20230127185818\\xenv-22.0.0.0.20230127185818.zip
-build.xenvironment.data = C:\\artifacts\\22.0.0.0.20230127185818\\xenv-data-22.0.0.0.20230127185818.zip
+build.xenvironment = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xenv-22.0.0.0.20230127185818.zip
+build.xenvironment.data = /opt/InstallX/artifacts/22.0.0.0.20230127185818/xenv-data-22.0.0.0.20230127185818.zip
 # Hardware Service zip
-build.hardware-service = C:\\artifacts\\22.0.0.0.20230127185818\\hwserv-22.0.0.0.20230127185818.zip
+build.hardware-service = /opt/InstallX/artifacts/22.0.0.0.20230127185818/hwserv-22.0.0.0.20230127185818.zip
 # Xstore Electron zip
-build.xstore-electron = C:\\artifacts\\22.0.0.0.20230127185818\\xstore-electron-22.0.0.0.20230127185818.zip
+build.xstore-electron = /opt/InstallX/artifacts/22.0.0.0.20230127185818\\xstore-electron-22.0.0.0.20230127185818.zip
 
 # Source Files - Folder mode (used when x.source.type == folders)
 # Xstore base build extracted
@@ -52,9 +52,9 @@ build.xstore-bin.folder = ../../../releases/22.0.0.0.20230127185818/xstore-bin
 # Xstore base database build extracted
 build.db.folder = ../../../releases/22.0.0.0.20230127185818/dbmake
 # Xenvironment customer build
-#build.xenvcust.folder = ../../workspace/V21/mto_xenvironment/dist
+#build.xenvcust.folder = ../../workspace/V22/mto_xenvironment/dist
 # Xstore customer build
-build.cust.folder = ../../workspace/V21/mto_pos/dist
+build.cust.folder = ../../workspace/V22/mto_pos/dist
 # Xcenter war extracted
 build.xcwar.folder = ../../../releases/22.0.0.0.20230127185818/xcenter
 # Xadmin ear extracted
@@ -67,7 +67,7 @@ build.services.folder = ../../../releases/22.0.0.0.20230127185818/xservices-inst
 build.services.war.folder = ../../../releases/22.0.0.0.20230127185818/xservices
 # Xenvironment zip extracted
 build.xenvironment.folder = ../../../releases/22.0.0.0.20230127185818/xenvironment
-build.xenvironment.data.folder = ../../workspace/V21/xstoredata/environment
+build.xenvironment.data.folder = ../../workspace/V22/xstoredata/environment
 # Hardware Service zip extracted
 build.hardware-service.folder = ../../../releases/22.0.0.0.20230127185818/hwserv
 # DirectoryInput Xstore Electron Build Folder
@@ -116,17 +116,17 @@ donot.maintain.receiptLogo = false
 upgrade.removeConfiguratorPatches = false
 
 is.xadmin.custom = 
-xadmin.custom.dir = ../../workspace/V21/mto_xcenter-admin/target/overlay
-xadmin.custom.dbscript.dir = ../../workspace/V21/mto_xcenter-admin/database
+xadmin.custom.dir = ../../workspace/V22/mto_xcenter-admin/target/overlay
+xadmin.custom.dbscript.dir = ../../workspace/V22/mto_xcenter-admin/database
 
 is.xcenter.custom = 
-xcenter.custom.dir = ../../workspace/V21/mto_xcenter/target/overlay
-xcenter.custom.dbscript.dir = ../../workspace/V21/mto_xcenter/database
+xcenter.custom.dir = ../../workspace/V22/mto_xcenter/target/overlay
+xcenter.custom.dbscript.dir = ../../workspace/V22/mto_xcenter/database
 
-xservices.overlay.dir = ../../workspace/V21/mto_xservices/target/overlay
-xservices.install.overlay.dir = ../../workspace/V21/mto_xservices/src/main/xservices-install
+xservices.overlay.dir = ../../workspace/V22/mto_xservices/target/overlay
+xservices.install.overlay.dir = ../../workspace/V22/mto_xservices/src/main/xservices-install
 
-hardware.service.overlay.dir = ../../workspace/V21/mto_hardware-service/target/dist
+hardware.service.overlay.dir = ../../workspace/V22/mto_hardware-service/target/dist
 
 # Include libraries for Bixolon
 bixolon = false
