push ant install changes
push ant install changes

--- a/mto_pos/cust_config/version1/translations.properties
+++ b/mto_pos/cust_config/version1/translations.properties
@@ -82,8 +82,8 @@ _promptMessageOverTendering=The transaction amount entered is more than the requ
 _mtoStoredcredit=Stored Credit
 _mtoStoredcreditvalidate="stored credit validation"
 _promptforstoredcreditvalidation="validation successfull"
-_promptmsgforstoredcredit=Stored Credit of {0} is available for this account.\n Do you want to use Stored Credit? Press Yes to continue.\n Press No to select other tender type.
-
+#_promptmsgforstoredcredit=Stored Credit of {0} is available for this account.\n Do you want to use Stored Credit? Press Yes to continue.\n Press No to select other tender type.
+_promptmsgforstoredcredit=Stored Credit of $ {0} is available for this account. \n Do you want to use Stored Credit? Press Yes to continue. \n Press No to select other tender type.
 #Store close when till is opened
 _storeclosetitle=Till Status
 _storeclosemessagewhentillisopen=All open tills are not reconciled. Press Yes to reconcile and No to try after operator reconciliation.
@@ -129,7 +129,8 @@ _promptmsg996=Entered amounts are not correct.\n \nPress Ok to proceed to the Ba
 
 
 #Till suspend
-_promptmsgUnlockUsr=Login attempt failed.The Cashier attached to this till can Resume the Till
+_promptmsgUnlockUsr=Login attempt failed.The Cashier attached to this till can Resume the Till.
+_login=Register Login
 #store open flow
 _cancel=CANCEL
 
