--- a/mto_pos/installx/builder/ant.install.properties
+++ b/mto_pos/installx/builder/ant.install.properties
@@ -56,7 +56,7 @@ build.db.folder = /u01/releases/22.0.0.0.20230127185818/dbmake
 # Xstore customer build
 build.cust.folder = ../../workspace/V22/mto_pos/dist
 # Xcenter war extracted
-build.xcwar.folder = ../../../releases/22.0.0.0.20230127185818/xcenter
+build.xcwar.folder = /u01/releases/22.0.0.0.20230127185818/xcenter
 # Xadmin ear extracted
 build.xadmin.folder = /u01/releases/22.0.0.0.20230127185818/xadmin
 # Xadmin DB zip extracted
