--- a/mto/sonar-project.properties
+++ b/mto/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=Ant-project-97964
 sonar.projectName=Ant-sonar
 sonar.projectVersion=1.0
-sonar.sources=src
-sonar.java.binaries=build
+sonar.sources=../mto_pos/src
+sonar.java.binaries=../mto_pos/classes
 #sonar.java.libraries=lib/*.jar
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
