--- a/mto/sonar-project.properties
+++ b/mto/sonar-project.properties
@@ -1,6 +1,6 @@
 #sonar.host.url=""
 sonar.projectKey=Ant-project-979
-sonar.projectName=Ant-sonar
+sonar.projectName=Ant-sonar-1
 sonar.projectVersion=1.0
 sonar.sources=src
 #sonar.java.binaries=../mto_pos/classes
