--- a/mto/sonar-project.properties
+++ b/mto/sonar-project.properties
@@ -4,5 +4,5 @@ sonar.projectName=Ant-sonar-1
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.java.binaries=build
-sonar.java.libraries=lib/*.jar
+#sonar.java.libraries=lib/*.jar
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
